quark/test/quark/AST/Errors/varNotDeclared-001.qk
// RUN: not quark --emit-ast "%s" 2>&1 | FileCheck "%s"

fn foo: -> void {
  i = 1;
}
// CHECK:Error: variable 'i' not defined!
